--- a/astronomy-objc/astronomy-objc/Main.storyboard
+++ b/astronomy-objc/astronomy-objc/Main.storyboard
@@ -32,34 +32,32 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageCell" id="Ljo-u8-cbz" customClass="ImageCollectionViewCell" customModule="astronomy_objc" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PlanetCell" id="Ljo-u8-cbz" customClass="ImageCollectionViewCell" customModule="astronomy_objc" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Blank" translatesAutoresizingMaskIntoConstraints="NO" id="xlN-QE-XWB">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Blank" translatesAutoresizingMaskIntoConstraints="NO" id="0OA-Zj-xl6">
                                                     <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
-                                                    <accessibility key="accessibilityConfiguration" identifier="MarsCellID"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="0OA-Zj-xl6" secondAttribute="height" multiplier="1:1" id="YcO-wa-Dhc"/>
+                                                    </constraints>
                                                 </imageView>
                                             </subviews>
                                         </view>
                                         <constraints>
-                                            <constraint firstItem="xlN-QE-XWB" firstAttribute="top" secondItem="Ljo-u8-cbz" secondAttribute="top" id="UIu-Cz-XX5"/>
-                                            <constraint firstAttribute="trailing" secondItem="xlN-QE-XWB" secondAttribute="trailing" id="X44-Ux-GSq"/>
-                                            <constraint firstItem="xlN-QE-XWB" firstAttribute="leading" secondItem="Ljo-u8-cbz" secondAttribute="leading" id="ndA-Z0-1y1"/>
-                                            <constraint firstAttribute="bottom" secondItem="xlN-QE-XWB" secondAttribute="bottom" id="x4l-Q0-qQ8"/>
+                                            <constraint firstItem="0OA-Zj-xl6" firstAttribute="top" secondItem="Ljo-u8-cbz" secondAttribute="top" id="4Xe-FW-Ovk"/>
+                                            <constraint firstAttribute="bottom" secondItem="0OA-Zj-xl6" secondAttribute="bottom" id="D7h-Mz-LN8"/>
+                                            <constraint firstItem="0OA-Zj-xl6" firstAttribute="leading" secondItem="Ljo-u8-cbz" secondAttribute="leading" id="OyO-YQ-9eV"/>
+                                            <constraint firstAttribute="trailing" secondItem="0OA-Zj-xl6" secondAttribute="trailing" id="dLb-aj-wUo"/>
                                         </constraints>
                                         <connections>
                                             <segue destination="kgd-gk-9pr" kind="show" identifier="ShowDetail" id="LAJ-Rh-Myv"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
-                                <connections>
-                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="7Oz-qw-1zv"/>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="LZ4-Vy-YyR"/>
-                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -72,7 +70,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="ak8-Zx-qVV"/>
                     <connections>
-                        <outlet property="collectionView" destination="x4T-SY-qY3" id="NaP-Ts-T0N"/>
+                        <outlet property="collectionView" destination="x4T-SY-qY3" id="Ga3-Bf-LP0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -127,6 +125,9 @@
                                         <rect key="frame" x="0.0" y="57" width="343" height="30"/>
                                         <accessibility key="accessibilityConfiguration" identifier="PhotoDetailViewController.SaveButton"/>
                                         <state key="normal" title="Save to Photo Library"/>
+                                        <connections>
+                                            <action selector="save:" destination="kgd-gk-9pr" eventType="touchUpInside" id="OU2-BG-uW0"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -145,7 +146,9 @@
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="4ed-4v-HFq"/>
                     <connections>
-                        <outlet property="imageView" destination="33C-GV-pNd" id="GKy-q9-3KS"/>
+                        <outlet property="cameraLabel" destination="9gd-7b-dyz" id="d3D-UY-hKe"/>
+                        <outlet property="detailLabel" destination="PDa-7E-DHh" id="PKW-5H-v7V"/>
+                        <outlet property="imageView" destination="33C-GV-pNd" id="U8a-Ja-dYJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qe7-tZ-Quj" userLabel="First Responder" sceneMemberID="firstResponder"/>
