--- a/ObjCAstronomy/ObjCAstronomy/Base.lproj/Main.storyboard
+++ b/ObjCAstronomy/ObjCAstronomy/Base.lproj/Main.storyboard
@@ -14,7 +14,7 @@
         <!--Photos Collection View Controller-->
         <scene sceneID="tRO-KN-P6U">
             <objects>
-                <viewController id="Wh1-lw-KE3" customClass="PhotosCollectionViewController" customModule="Astronomy" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Wh1-lw-KE3" customClass="PhotosCollectionViewController" customModule="ObjCAstronomy" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="e1U-DP-aGL"/>
                         <viewControllerLayoutGuide type="bottom" id="ecv-RD-r8V"/>
@@ -33,14 +33,14 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageCell" id="J65-Pi-958" customClass="ImageCollectionViewCell" customModule="Astronomy" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageCell" id="J65-Pi-958" customClass="ImageCollectionViewCell" customModule="ObjCAstronomy" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MarsPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="GdH-cv-wQJ">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Blank" translatesAutoresizingMaskIntoConstraints="NO" id="GdH-cv-wQJ">
                                                     <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                                 </imageView>
                                             </subviews>
@@ -84,7 +84,7 @@
         <!--Title-->
         <scene sceneID="7MT-kH-gc2">
             <objects>
-                <viewController id="C1Q-5I-vr6" customClass="PhotoDetailViewController" customModule="Astronomy" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="C1Q-5I-vr6" customClass="PhotoDetailViewController" customModule="ObjCAstronomy" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="wRL-HL-fTU"/>
                         <viewControllerLayoutGuide type="bottom" id="scn-hb-mmC"/>
@@ -93,7 +93,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MarsPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="4EK-JW-i3M">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Blank" translatesAutoresizingMaskIntoConstraints="NO" id="4EK-JW-i3M">
                                 <rect key="frame" x="0.0" y="88" width="414" height="548"/>
                                 <accessibility key="accessibilityConfiguration" identifier="PhotoDetailViewController.ImageView"/>
                             </imageView>
@@ -178,6 +178,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="MarsPlaceholder" width="16" height="16"/>
+        <image name="Blank" width="100" height="100"/>
     </resources>
 </document>
