--- a/astronomy-objc/astronomy-objc/Main.storyboard
+++ b/astronomy-objc/astronomy-objc/Main.storyboard
@@ -80,7 +80,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PlanetCell" id="Ljo-u8-cbz" customClass="ImageCollectionViewCell" customModule="astronomy_objc" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PlanetCell" id="Ljo-u8-cbz" customClass="PhotosCollectionCell" customModule="astronomy_objc" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -102,6 +102,7 @@
                                             <constraint firstAttribute="trailing" secondItem="0OA-Zj-xl6" secondAttribute="trailing" id="dLb-aj-wUo"/>
                                         </constraints>
                                         <connections>
+                                            <outlet property="imageView" destination="0OA-Zj-xl6" id="gX2-EP-f5l"/>
                                             <segue destination="kgd-gk-9pr" kind="show" identifier="ShowDetail" id="LAJ-Rh-Myv"/>
                                         </connections>
                                     </collectionViewCell>
