--- a/Astronomy Combo/Astronomy Combo/Misc/Base.lproj/Main.storyboard
+++ b/Astronomy Combo/Astronomy Combo/Misc/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -56,6 +57,7 @@
                                 <size key="customSize" width="135" height="130"/>
                                 <connections>
                                     <outlet property="imageView" destination="rGf-Kf-Ffb" id="KLx-cd-QRy"/>
+                                    <segue destination="QRN-2K-8ia" kind="show" id="98Y-KF-wZg"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -80,6 +82,36 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="98z-m4-Rnz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="968.11594202898561" y="136.60714285714286"/>
+        </scene>
+        <!--Mars Detail View Controller-->
+        <scene sceneID="v9l-ND-FB2">
+            <objects>
+                <viewController id="QRN-2K-8ia" customClass="MarsDetailViewController" customModule="Astronomy_Combo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="UVx-aR-tKB">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uLW-v1-xNu">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="uLW-v1-xNu" secondAttribute="bottom" id="33c-cx-unG"/>
+                            <constraint firstItem="uLW-v1-xNu" firstAttribute="leading" secondItem="zA5-HR-yue" secondAttribute="leading" id="D6u-Uq-WsG"/>
+                            <constraint firstItem="uLW-v1-xNu" firstAttribute="top" secondItem="zA5-HR-yue" secondAttribute="top" id="FrH-ag-oI3"/>
+                            <constraint firstAttribute="trailing" secondItem="uLW-v1-xNu" secondAttribute="trailing" id="eIW-RQ-sbp"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="zA5-HR-yue"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="ToG-fj-ePe"/>
+                    <connections>
+                        <outlet property="imageView" destination="uLW-v1-xNu" id="hhc-1o-zDs"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mLv-6s-hhw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1881" y="137"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="sIz-bt-hbS">
